--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,15 @@
 {
   "compilerOptions": {
-    "composite": true,
     "target": "es2015",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "commonjs",
     "declaration": true,
-    "strict": true,
     "outDir": "./lib",
-    "rootDir": "src",
+    "strict": true,
     "noUnusedLocals": true,
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__test__/*S"]
